clean and refactor work

--- a/hw1/Makefile
+++ b/hw1/Makefile
@@ -5,7 +5,7 @@ endif
 all: vodserver
 
 vodserver: src/main.c
-	gcc -o vodserver src/main.c
+	gcc -Wall -o vodserver src/main.c
 
 run: vodserver
 	./vodserver $(port)
