content-range for all files added

--- a/hw1/Makefile
+++ b/hw1/Makefile
@@ -2,6 +2,7 @@ ifndef port
 port = 8345
 endif
 
+.PHONY: clean
 all: vodserver
 
 vodserver: src/main.c
@@ -10,5 +11,10 @@ vodserver: src/main.c
 run: vodserver
 	./vodserver $(port)
 
+test:
+	(cd scripts; ./test_script.sh $(port) | tee test.log)
+
 clean:
 	rm -f vodserver
+	rm -rf scripts/dump
+	rm -f scripts/test.log
