final updates for hw2 Winton_branch

--- a/hw2/Makefile
+++ b/hw2/Makefile
@@ -1,5 +1,6 @@
 ifndef port
-port = 8345
+port1 = 8345
+port2 = 8346
 endif
 
 .PHONY: clean
@@ -9,7 +10,7 @@ vodserver: src/main.c
 	gcc -Wall -o vodserver src/main.c src/socket_utils.c src/http_utils.c src/uri_parse.c
 
 run: vodserver
-	./vodserver $(port)
+	./vodserver $(port1) $(port2)
 
 test:
 	(cd scripts; ./test_script.sh $(port) | tee test.log)
