--- a/hw3/Makefile
+++ b/hw3/Makefile
@@ -11,7 +11,7 @@ port3 = 8347
 endif
 
 CC=gcc
-CFLAGS= -pthread -g -I src/lib/cJSON -I src/lib/uuid4
+CFLAGS= -pthread -g -I src/lib/cJSON -I src/lib/uuid4 -std=gnu99
 LIBS= src/lib/cJSON/cJSON.c src/lib/uuid4/uuid4.c
 
 .PHONY: clean
@@ -20,7 +20,7 @@ all: vodserver peerserver
 vodserver: src/main.o src/socket_utils.o src/http_utils.o src/uri_parse.o src/hashmap.o src/json_utils.o src/conf_utils.o src/hmap_utils.o
 	$(CC) $(CFLAGS) $^ $(LIBS) -o $@
 
-peerserver: src/udp-server.o src/hashmap.o 
+peerserver: src/udp-server.o src/hashmap.o
 	$(CC) $(CFLAGS) $^ $(LIBS) -o $@
 
 %.o: %.c
@@ -34,6 +34,12 @@ run: vodserver
 
 test:
 	(cd scripts; ./test_script.sh $(port1) | tee test.log)
+
+
+peer-test: ./scripts/run_nodes.sh
+	./scripts/run_nodes.sh
+
+
 
 clean:
 	rm -f src/*.o vodserver peerserver
