--- a/hw3/node.conf
+++ b/hw3/node.conf
@@ -3,5 +3,5 @@ name = node1
 frontend_port = 8348
 backend_port = 8349
 content_dir = content/
-peer_count = 1
-peer_0 = 24f22a83-16f4-4bd5-af63-b5c6e979dbb,localhost,8345,8346,10
+peer_count = 0
+# peer_0 = 24f22a83-16f4-4bd5-af63-b5c6e979dbb,localhost,8345,8346,10
