--- a/hw4/node.conf
+++ b/hw4/node.conf
@@ -4,4 +4,4 @@ frontend_port = 8345
 backend_port = 8346
 content_dir = content/
 peer_count = 1
-peer_0 = 11ccceb6-b696-4ed6-b285-f3674cca2d18,localhost,8347,8348,10
+peer_0 = 11ccceb6-b696-4ed6-b285-f3674cca2d20,10.20.44.144,8345,8346,10
